--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#e0e0e0">
 
 
     <androidx.appcompat.widget.Toolbar
