--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -4,27 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e0e0e0"
     tools:context=".GroupChatActivity">
 
 
     <include
         android:id="@+id/chat_toolbar"
+        layout="@layout/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        layout="@layout/app_bar_layout">
-    </include>
+        android:background="?attr/colorPrimary"></include>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/private_messages_list_of_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/chat_toolbar"
         android:layout_above="@+id/myLinearLayout"
-        android:layout_marginBottom="6dp"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_below="@+id/chat_toolbar"
+        android:layout_marginBottom="6dp"></androidx.recyclerview.widget.RecyclerView>
 
 
     <RelativeLayout
@@ -32,33 +30,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:background="@android:color/background_light"
-        android:orientation="horizontal"
-        android:layout_alignParentLeft="true">
+        android:orientation="horizontal">
 
 
         <EditText
             android:id="@+id/input_group_message"
             android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:hint="輸入訊息"
-            android:padding="17dp"
-            android:maxLines="5"
-            android:layout_toEndOf="@+id/send_files_btn"
             android:layout_toStartOf="@+id/send_message_btn"
+            android:layout_toLeftOf="@+id/send_message_btn"
+            android:layout_toEndOf="@+id/send_files_btn"
             android:layout_toRightOf="@+id/send_files_btn"
-            android:layout_toLeftOf="@+id/send_message_btn" />
+            android:hint="輸入訊息"
+            android:maxLines="5"
+            android:padding="17dp" />
 
 
         <ImageButton
             android:id="@+id/send_message_button"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_menu_send"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:backgroundTint="@android:color/white"
-            android:layout_alignParentRight="true" />
+            android:src="@drawable/ic_menu_send" />
 
     </RelativeLayout>
 
