--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,13 +8,13 @@ tools:context=".ChatFragment">
 <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
 
-    android:id="@+id/chats_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentStart="true"
+        android:id="@+id/chats_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    />
+        android:layout_alignParentTop="true"
+        android:background="#e0e0e0" />
 
 
 
