評價頁面完成

--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -40,8 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_profile_image"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textview"
         android:gravity="center_horizontal"
         android:hint="username"
         android:inputType="textMultiLine"
@@ -56,8 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_user_name"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textview"
         android:gravity="center_horizontal"
         android:hint="status"
         android:inputType="textMultiLine"
@@ -72,8 +74,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_profile_status"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textview"
         android:gravity="center_horizontal"
         android:hint="gender"
         android:inputType="textMultiLine"
@@ -88,8 +91,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/gender"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textview"
         android:gravity="center_horizontal"
         android:hint="age"
         android:inputType="textMultiLine"
@@ -104,8 +108,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/age"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textview"
         android:gravity="center_horizontal"
         android:hint="phone"
         android:inputType="textMultiLine"
@@ -121,15 +126,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/phone"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="@drawable/shape_textviewlogin"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:padding="6dp"
         android:text="Update"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
+        android:textColor="#000"
         android:textSize="20sp"
         android:textStyle="bold" />
 
