--- a/app/src/main/res/layout/favorite_layout.xml
+++ b/app/src/main/res/layout/favorite_layout.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/users_profile_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
@@ -69,7 +69,7 @@
             android:layout_height="43dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/p12" />
+            android:background="@drawable/heart" />
 
 
     </LinearLayout>
