--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -5,12 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".GroupsFragment">
 
+    <!-- TODO: Update blank fragment layout -->
+    <androidx.recyclerview.widget.RecyclerView
 
-    <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/group_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:background="#e0e0e0" />
+
+
+
 </RelativeLayout>
