編輯個人頁面完成

--- a/app/src/main/res/layout/content_verify.xml
+++ b/app/src/main/res/layout/content_verify.xml
@@ -110,7 +110,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/userSex"
+                            android:id="@+id/userSexLay"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
@@ -130,7 +130,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/userPhone"
+                            android:id="@+id/userPhoneLay"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
