--- a/app/src/main/res/layout/app_bar_favorite.xml
+++ b/app/src/main/res/layout/app_bar_favorite.xml
@@ -26,5 +26,5 @@
 <!--        android:layout_gravity="bottom|end"-->
 <!--        android:layout_margin="@dimen/fab_margin"-->
 <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
-    <include layout="@layout/content_favorite" />
+<!--    <include layout="@layout/content_favorite" />-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
