--- a/app/src/main/res/layout/verify_layout.xml
+++ b/app/src/main/res/layout/verify_layout.xml
@@ -78,7 +78,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/userPhone"
+                android:id="@+id/userPhoneLay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
