--- a/app/src/main/res/layout/activity_editpersonalpage.xml
+++ b/app/src/main/res/layout/activity_editpersonalpage.xml
@@ -7,14 +7,15 @@
     android:background="#e0e0e0">
 
     <LinearLayout
-        android:id="@+id/layout"
+        android:id="@+id/profile"
         android:layout_width="411dp"
         android:layout_height="292dp"
         android:background="?attr/colorPrimary"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/guideline4"
+        app:layout_constraintRight_toRightOf="@id/guideline4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.006">
 
@@ -55,7 +56,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="@id/guideline4"
         app:layout_constraintRight_toRightOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/layout"
+        app:layout_constraintTop_toBottomOf="@id/profile"
         tools:layout_constraintLeft_toLeftOf="@id/guideline4">
 
         <EditText
@@ -95,8 +96,8 @@
         android:layout_height="56dp"
         android:layout_marginTop="15dp"
         android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/guideline4"
+        app:layout_constraintRight_toRightOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/userSexLay">
 
         <EditText
@@ -114,9 +115,9 @@
         android:layout_width="406dp"
         android:layout_height="56dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="@id/guideline4"
+        app:layout_constraintRight_toRightOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/userBirthLay">
 
         <EditText
@@ -133,10 +134,10 @@
         android:id="@+id/userPhoneLay"
         android:layout_width="406dp"
         android:layout_height="56dp"
-        android:orientation="vertical"
         android:layout_marginTop="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="@id/guideline4"
+        app:layout_constraintRight_toRightOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/userEmailLay">
 
         <EditText
@@ -157,8 +158,8 @@
         android:layout_height="69dp"
         android:layout_marginTop="15dp"
         android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/guideline4"
+        app:layout_constraintRight_toRightOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/userPhoneLay">
 
         <Button
