加上搜尋功能資料目前為空 須從資料庫抓 剩下全部介面調整成glide抓圖片 地圖切換類別需重畫地標

--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -7,6 +7,12 @@
     android:background="#e0e0e0">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar4"
         android:layout_width="match_parent"
@@ -23,8 +29,8 @@
         android:layout_height="678dp"
         android:layout_marginTop="55dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guideline6"
+        app:layout_constraintStart_toStartOf="@id/guideline6"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
