--- a/app/src/main/res/layout/activity_createact.xml
+++ b/app/src/main/res/layout/activity_createact.xml
@@ -29,15 +29,7 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:orientation="horizontal">
-
-        <include
-            layout="@layout/nav_header_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
