--- a/app/src/main/res/layout/activity_editpersonalpage.xml
+++ b/app/src/main/res/layout/activity_editpersonalpage.xml
@@ -60,7 +60,7 @@
         tools:layout_constraintLeft_toLeftOf="@id/guideline4">
 
         <EditText
-            android:id="@+id/userNameEdit"
+            android:id="@+id/set_user_name"
             android:layout_width="372dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@id/userNameLay">
 
         <EditText
-            android:id="@+id/userSexEdit"
+            android:id="@+id/set_profile_status"
             android:layout_width="372dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -141,7 +141,7 @@
         app:layout_constraintTop_toBottomOf="@id/userEmailLay">
 
         <EditText
-            android:id="@+id/userPhoneEdit"
+            android:id="@+id/phone"
             android:layout_width="372dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -156,11 +156,10 @@
         android:id="@+id/userSubmitLay"
         android:layout_width="409dp"
         android:layout_height="69dp"
-        android:layout_marginTop="15dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/guideline4"
-        app:layout_constraintRight_toRightOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/userPhoneLay">
+        app:layout_constraintRight_toRightOf="@id/guideline4">
 
         <Button
             android:id="@+id/Submit"
