--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -7,6 +7,13 @@
     android:background="#e0e0e0">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar4"
         android:layout_width="match_parent"
@@ -23,9 +30,9 @@
         android:layout_height="678dp"
         android:layout_marginTop="55dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="@id/guideline8"
+        app:layout_constraintStart_toStartOf="@id/guideline8"
+        app:layout_constraintTop_toTopOf="@id/toolbar4">
 
         <TextView
             android:id="@+id/Title"
