--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -38,7 +38,7 @@
                 <TextView
                     android:id="@+id/user_profile_name"
                     android:layout_width="200dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:gravity="start"
                     android:text="user name"
@@ -65,9 +65,9 @@
                     android:id="@+id/user_status"
                     android:layout_width="225dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="start"
-                    android:paddingLeft="8dp"
                     android:text="user status"
                     android:textAlignment="textStart"
                     android:textSize="16sp" />
@@ -75,15 +75,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_height="37dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/request_accept_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:background="@android:color/holo_green_light"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_accept"
                     android:text="Accept"
                     android:textAllCaps="false"
                     android:textSize="16sp"
@@ -92,10 +92,10 @@
                 <Button
                     android:id="@+id/request_cancel_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@android:color/holo_red_dark"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/shape_reject"
                     android:text="Cancel"
                     android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
