--- a/app/src/main/res/layout/item_act.xml
+++ b/app/src/main/res/layout/item_act.xml
@@ -35,11 +35,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/actName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="20dp"/>
 
                 <TextView
                     android:id="@+id/textView58"
