--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -98,7 +98,7 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textStyle="bold" />
 
-                <EditText
+                <Spinner
                     android:id="@+id/gender"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
