--- a/app/src/main/res/layout/item_actrecord.xml
+++ b/app/src/main/res/layout/item_actrecord.xml
@@ -40,11 +40,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/actName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="20dp"/>
 
                 <TextView
                     android:id="@+id/textView58"
