--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -212,25 +212,30 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
-                    android:layout_width="401dp"
-                    android:layout_height="144dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp">
+<!--                <HorizontalScrollView-->
+<!--                    android:layout_width="401dp"-->
+<!--                    android:layout_height="144dp"-->
+<!--                    android:layout_marginLeft="10dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:layout_marginRight="10dp"-->
+<!--                    android:layout_marginBottom="10dp">-->
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+<!--                    <LinearLayout-->
+<!--                        android:id="@+id/actHoldLay"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical">-->
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/actHold"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-                    </LinearLayout>
-                </HorizontalScrollView>
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"/>
+<!--                    </LinearLayout>-->
+<!--                </HorizontalScrollView>-->
 
                 <TextView
                     android:id="@+id/recordAct"
@@ -242,25 +247,14 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
-                    android:layout_width="401dp"
-                    android:layout_height="144dp"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/actRec"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/actRec"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                </HorizontalScrollView>
+                    android:layout_marginBottom="10dp"/>
 
                 <TextView
                     android:id="@+id/friend"
@@ -273,25 +267,14 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
-                    android:layout_width="401dp"
-                    android:layout_height="144dp"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/friendList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/friendList"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-                    </LinearLayout>
-                </HorizontalScrollView>
+                    android:layout_marginBottom="10dp"/>
 
             </LinearLayout>
         </ScrollView>
